

changelog of master-branch:
    - during developing more features, the developer has decided to discard the progress. As some more difficulties had
        occur [Covid-19], the development time for these dev-cycle was far longer than expected.
    - resize-event is called after every state switch now
    - refactored ModLoader-class & optimized some loading systems

    planned:
        - change how mod.json's work, rework event loading annotations [@G.modloader(<modname>) -> event by func name?
        - search why generation takes so long [issue 166]
        - speed up chunk accessing [issue 164 & 165]
        - make startup fail-save [issue 167]
        - fix issue 137, 159, 161
        - check for the reason of issue 157 and fix if possible
        - fix debug world [it sets the state, but does not update visible state with redraw=True] (issue 154)
        - fix issue 149 [caused by an wrong slot assignment to clear]
        - fix issue 9 caused by an missing _finish call in ItemFactory


changelog of snapshot 20w14a
    - added new event: "stage:blockitemfactory:finish"
    - cleaned up base classes for block and item
    - chunk entries containing positions are mostly stored relative to the chunk decreasing save file size
    - changed some internal inventory interaction things
    - on_shift_click can now return True when it should interrupt the following logic
    - slots can now handle an key press
    - rewritten mouse interaction system to support dragging over more than one slot & better shift-clicking
    - moved Entity-class into entity/Entity.py
    - entities are now saved in saves
    - added EntityHandler with entity-registry
    - made function draw and tick called of entity
    - added EntityRenderer with parser of model files
    - added renderer for player
    - added saves for entities
    - added /summon command
    - added loading phase for entities